mxslc/tests/data/error/version_4.mxsl
#version 1.38

int x = 1 + 1;
